--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.enparadigmassignment"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -59,6 +59,7 @@ dependencies {
     implementation "com.squareup.inject:assisted-inject-processor-dagger2:0.5.2"
     implementation "com.squareup.inject:assisted-inject-annotations-dagger2:0.5.2"
     implementation "javax.annotation:jsr250-api:1.0"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
 
     //retrofit
     implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
@@ -71,6 +72,11 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.jakewharton.rxbinding3:rxbinding-appcompat:3.1.0'
+
+    //room
+    implementation 'androidx.room:room-runtime:2.2.5'
+    kapt "androidx.room:room-compiler:2.2.5"
+    implementation 'androidx.room:room-rxjava2:2.2.5'
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
